; ModuleID = '/home/carl/AnghaBench/git/extr_transport-helper.c_string_list_set_helper_option.c'
source_filename = "/home/carl/AnghaBench/git/extr_transport-helper.c_string_list_set_helper_option.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.strbuf = type { i32 }
%struct.helper_data = type { i32 }
%struct.string_list = type { i32, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

@STRBUF_INIT = common dso_local global %struct.strbuf zeroinitializer, align 4
@.str = private unnamed_addr constant [11 x i8] c"option %s \00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.helper_data*, i8*, %struct.string_list*)* @string_list_set_helper_option to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @string_list_set_helper_option(%struct.helper_data* %0, i8* %1, %struct.string_list* %2) #0 {
  %4 = alloca %struct.helper_data*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca %struct.string_list*, align 8
  %7 = alloca %struct.strbuf, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store %struct.helper_data* %0, %struct.helper_data** %4, align 8
  store i8* %1, i8** %5, align 8
  store %struct.string_list* %2, %struct.string_list** %6, align 8
  %10 = bitcast %struct.strbuf* %7 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %10, i8* align 4 bitcast (%struct.strbuf* @STRBUF_INIT to i8*), i64 4, i1 false)
  store i32 0, i32* %9, align 4
  store i32 0, i32* %8, align 4
  br label %11

11:                                               ; preds = %36, %3
  %12 = load i32, i32* %8, align 4
  %13 = load %struct.string_list*, %struct.string_list** %6, align 8
  %14 = getelementptr inbounds %struct.string_list, %struct.string_list* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 8
  %16 = icmp slt i32 %12, %15
  br i1 %16, label %17, label %39

17:                                               ; preds = %11
  %18 = load i8*, i8** %5, align 8
  %19 = call i32 @strbuf_addf(%struct.strbuf* %7, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i64 0, i64 0), i8* %18)
  %20 = load %struct.string_list*, %struct.string_list** %6, align 8
  %21 = getelementptr inbounds %struct.string_list, %struct.string_list* %20, i32 0, i32 1
  %22 = load %struct.TYPE_2__*, %struct.TYPE_2__** %21, align 8
  %23 = load i32, i32* %8, align 4
  %24 = sext i32 %23 to i64
  %25 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %22, i64 %24
  %26 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %25, i32 0, i32 0
  %27 = load i32, i32* %26, align 4
  %28 = call i32 @quote_c_style(i32 %27, %struct.strbuf* %7, i32* null, i32 0)
  %29 = call i32 @strbuf_addch(%struct.strbuf* %7, i8 signext 10)
  %30 = load %struct.helper_data*, %struct.helper_data** %4, align 8
  %31 = call i32 @strbuf_set_helper_option(%struct.helper_data* %30, %struct.strbuf* %7)
  store i32 %31, i32* %9, align 4
  %32 = icmp ne i32 %31, 0
  br i1 %32, label %33, label %34

33:                                               ; preds = %17
  br label %39

34:                                               ; preds = %17
  %35 = call i32 @strbuf_reset(%struct.strbuf* %7)
  br label %36

36:                                               ; preds = %34
  %37 = load i32, i32* %8, align 4
  %38 = add nsw i32 %37, 1
  store i32 %38, i32* %8, align 4
  br label %11

39:                                               ; preds = %33, %11
  %40 = call i32 @strbuf_release(%struct.strbuf* %7)
  %41 = load i32, i32* %9, align 4
  ret i32 %41
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @strbuf_addf(%struct.strbuf*, i8*, i8*) #2

declare dso_local i32 @quote_c_style(i32, %struct.strbuf*, i32*, i32) #2

declare dso_local i32 @strbuf_addch(%struct.strbuf*, i8 signext) #2

declare dso_local i32 @strbuf_set_helper_option(%struct.helper_data*, %struct.strbuf*) #2

declare dso_local i32 @strbuf_reset(%struct.strbuf*) #2

declare dso_local i32 @strbuf_release(%struct.strbuf*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
